[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/UI/main_menu_background_placeholder.jpg" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Gobold Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/CharacterCreation.gd" type="Script" id=3]
[ext_resource path="res://assets/UI/button_notPressed.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/button_pressed.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/Gobold.tres" type="DynamicFont" id=6]
[ext_resource path="res://scripts/SelectClass.gd" type="Script" id=7]
[ext_resource path="res://assets/testing_spritesheet.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=3]
size = 34
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 8 )
region = Rect2( 320.25, 110.25, 15, 19.25 )

[sub_resource type="DynamicFont" id=4]
size = 110
font_data = ExtResource( 2 )

[node name="CharacterSelection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="background" type="TextureRect" parent="."]
self_modulate = Color( 0.286275, 0.286275, 0.286275, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -958.413
margin_top = -540.0
margin_right = 961.587
margin_bottom = 540.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 3 )
text = "Select Class"
align = 1
valign = 1

[node name="Buttons" type="Container" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -110.0
margin_bottom = -25.0
script = ExtResource( 3 )

[node name="ButtonBack" type="TextureButton" parent="Buttons"]
editor/display_folded = true
margin_left = 50.0
margin_right = 450.0
margin_bottom = 50.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="Buttons/ButtonBack"]
margin_right = 400.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 6 )
text = "Back"
align = 1
valign = 1
uppercase = true

[node name="ButtonFinish" type="TextureButton" parent="Buttons"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -450.0
margin_right = -50.0
margin_bottom = 50.0
disabled = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="Buttons/ButtonFinish"]
margin_right = 400.0
margin_bottom = 45.0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.643137, 0.643137, 0.643137, 1 )
text = "Create"
align = 1
valign = 1
uppercase = true

[node name="marginContainer" type="MarginContainer" parent="."]
editor/display_folded = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -67.0
margin_top = -24.0

[node name="LabelVersion" type="Label" parent="marginContainer"]
margin_top = 5.0
margin_right = 67.0
margin_bottom = 19.0
grow_horizontal = 0
text = "v 0_0_0"
align = 1
valign = 1

[node name="ListBackground" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = -460.0
margin_right = -50.0
margin_bottom = -150.0
color = Color( 0, 0, 0, 0.572549 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = -460.0
margin_right = -50.0
margin_bottom = -150.0
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_bottom = 600.0
custom_constants/separation = 150
script = ExtResource( 7 )

[node name="Knight" type="Container" parent="ScrollContainer/VBoxContainer"]
editor/display_folded = true

[node name="Knight" type="TextureButton" parent="ScrollContainer/VBoxContainer/Knight"]
margin_right = 924.0
margin_bottom = 150.0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer/Knight/Knight"]
margin_right = 180.0
margin_bottom = 150.0
texture = SubResource( 2 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Knight/Knight"]
margin_right = 927.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 4 )
text = "Knight"
align = 1
valign = 1

[node name="Berserker" type="Container" parent="ScrollContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 150.0
margin_bottom = 150.0

[node name="Berserker" type="TextureButton" parent="ScrollContainer/VBoxContainer/Berserker"]
margin_right = 924.0
margin_bottom = 150.0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer/Berserker/Berserker"]
margin_right = 180.0
margin_bottom = 150.0
texture = SubResource( 2 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Berserker/Berserker"]
margin_right = 927.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 4 )
text = "Berserker"
align = 1
valign = 1

[node name="Assasin" type="Container" parent="ScrollContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 300.0
margin_bottom = 300.0

[node name="Assasin" type="TextureButton" parent="ScrollContainer/VBoxContainer/Assasin"]
margin_right = 924.0
margin_bottom = 150.0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer/Assasin/Assasin"]
margin_right = 180.0
margin_bottom = 150.0
texture = SubResource( 2 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Assasin/Assasin"]
margin_right = 927.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 4 )
text = "Assasin"
align = 1
valign = 1

[node name="Sniper" type="Container" parent="ScrollContainer/VBoxContainer"]
editor/display_folded = true
margin_top = 450.0
margin_bottom = 450.0

[node name="Sniper" type="TextureButton" parent="ScrollContainer/VBoxContainer/Sniper"]
margin_right = 924.0
margin_bottom = 150.0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true

[node name="TextureRect" type="TextureRect" parent="ScrollContainer/VBoxContainer/Sniper/Sniper"]
margin_right = 180.0
margin_bottom = 150.0
texture = SubResource( 2 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/Sniper/Sniper"]
margin_right = 927.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 4 )
text = "Sniper"
align = 1
valign = 1

[node name="Container" type="Container" parent="ScrollContainer/VBoxContainer"]
margin_top = 600.0
margin_bottom = 600.0

[connection signal="pressed" from="Buttons/ButtonBack" to="Buttons" method="_on_ButtonBack_pressed"]
[connection signal="pressed" from="Buttons/ButtonFinish" to="Buttons" method="_on_ButtonFinish_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Knight/Knight" to="ScrollContainer/VBoxContainer" method="_on_Knight_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Berserker/Berserker" to="ScrollContainer/VBoxContainer" method="_on_Berserker_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Assasin/Assasin" to="ScrollContainer/VBoxContainer" method="_on_Assasin_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/Sniper/Sniper" to="ScrollContainer/VBoxContainer" method="_on_Sniper_pressed"]
